crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@indexing.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ hello[0] }}\n{{ hello[3] }}\n{{ hello[-1] }}\n{{ hello[999] is undefined }}\n{{ intrange[0] }}\n{{ intrange[3] }}\n{{ intrange[-1] }}\n{{ intrange[999] is undefined }}"
info:
  __minijinja_current_path: indexing.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
  hello: Hällo Wörld
  intrange:
    - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
input_file: crates/dbt-jinja/minijinja/tests/inputs/indexing.txt
---
H
l
d
True
0
3
9
True
