crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@loop-recursion-error.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% for item in seq recursive %}\n  {{ loop(seq) }}\n{% endfor %}"
info:
  __minijinja_current_path: loop-recursion-error.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
  seq:
    - 1
    - 2
    - 3
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/loop-recursion-error.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "recursion limit exceeded",
    name: "loop-recursion-error.txt",
}

invalid operation: recursion limit exceeded
(in loop-recursion-error.txt:1:1)
