crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@loop.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<ul>\n{% for item in seq %}\n    <li>{{ item }}</li>\n{% endfor %}\n</ul>"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/loop.txt
---
<ul>

    <li>1</li>

    <li>2</li>

    <li>3</li>

</ul>

